# graphql_poc

./: .gitignore  README.md  client.ml  client_lib.ml  dune  server.ml  server_schema.ml
lib/: address.ml  contact.ml  contacts.ml  dune  gql_fields.ml  gql_types.ml  json.ml  kind.ml  obj_arg.ml  wrapper.ml
